name:          extls
category:      Network
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        James Deikun and Carter Schonwald
maintainer:    James Deikun <james@place.org>
stability:     experimental
homepage:      https://github.com/xplat/extls/
bug-reports:   https://github.com/xplat/extls/issues
copyright:     Copyright (C) 2015 James Deikun and Carter Schonwald
synopsis:      extls
description:   TLS connections for internal and partnership networks
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/xplat/extls.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
